# 3D-Curved-Surfaces-Segmentation

./: CMakeLists.txt  README.md  extract_point_cloud_from_volumes.py  generate_ground_truth_meshes.py  io.h  main.cxx  main.py  other.h  pcl_utils.cxx  pcl_utils.h  process_for_visualization.py  run_pipeline.py  test.cxx
code/: Dockerfile  run_pipeline.py
code/src/: CMakeLists.txt  io.cxx  io.h  main.cxx  pcl_utils.cxx  pcl_utils.h  processing.cxx  processing.h
old/: example_02.py  fill_holes_vtk.py  play_with_NURBS.py
output/private/: t01.csv  t02.csv  t03.csv  t04.csv  t05.csv  t06.csv  t07.csv  t08.csv  t09.csv  t10.csv
output/public/: result.txt
version_final/code/: Dockerfile  run_pipeline.py
version_final/code/src/: CMakeLists.txt  io.h  main.cxx  other.cxx  pcl_utils.cxx  pcl_utils.h  processing.cxx  processing.h  test.cxx
